--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,10 +2,15 @@
 version: '3.0'
 services:
   web:
-    # TODO: image, ports and redis dependency
+    image: "kshalot/io-lab-docker-ci-public:v1.0"
+    ports:
+      - "80:5000"
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
   redis:
     image: redis:6.0-rc3
-    # TODO: persistence for redis. You need to persist /data directory.
+    volumes:
+      - "redis-db:/data"
+volumes:
+  redis-db:
